Hydra test coverage for thin client smart connector (#548)
* - Added hydra test coverage for thin client smart connector mode testing

* - Minor fix in bt